# REGAT

./: .gitignore  README.md  pyproject.toml  requirements.txt
regat/: __init__.py  cli.py
regat/modules/: dns_enum.py  endpoints.py  fuzzing.py  headers.py  recon.py  report.py  robots.py  scoring.py  ssl_check.py  utils.py
wordlists/: endpoints.txt  subdomains.txt
